# fixtures/openapi.yaml
@@ -1,15 +1,12 @@
 openapi: 3.0.0
 info:
-  title: Vulcain demo
-  version: '1.0'
-  description: ''
+  title: Vulcain Fixtures
+  version: 1.0.0
 paths:
   /oa/books.json:
     get:
-      summary: book list
-      tags: []
       responses:
-        '200':
+        default:
           description: OK
           content:
             application/json:
@@ -20,6 +17,13 @@ paths:
                     type: array
                     items:
                       type: integer
+          links:
+            book:
+              # TODO: operationRef isn't supported yet
+              #operationRef: '#/paths/~1oa~1books~1{id}/get'
+              operationId: getBook
+              parameters:
+                id: '$response.body#/member/*'
   '/oa/books/{id}':
     parameters:
       - schema:
@@ -28,9 +32,10 @@ paths:
         in: path
         required: true
     get:
-      summary: book item
-      tags: []
+      operationId: getBook
       responses:
+        '103':
+          description: continue
         '200':
           description: OK
           content:
@@ -38,6 +43,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/book'
           links:
+            foo:
             author:
               # TODO: operationRef isn't supported yet
               #operationRef: '#/paths/~1oa~1authors~1{id}/get'
@@ -46,16 +52,13 @@ paths:
                 id: '$response.body#/author'
   '/oa/authors/{id}':
     parameters:
-      - type: string
-        name: id
+      - name: id
         in: path
         required: true
         schema:
           type: integer
     get:
       operationId: getAuthor
-      summary: author item
-      tags: []
       responses:
         '200':
           description: OK
